--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,4 @@
+
 <% if flash[:notice] %>
      <p id="notice">
        <%= flash[:notice] %>
@@ -29,16 +30,25 @@
 
 <h2>New Book</h2>
 
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>errors prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <%= form_with model: @book, url: '/books', method: :post  do |f| %>
 
-  <p>Title</p>
+<label for="book_title">Title</label>
   <%= f.text_field :title %>
-	
-  <p>Body</p>
-  <%= f.text_area :body %>
-	
-  <%= f.submit 'Create Book' %>
   
+<label for="book_body">Body</label>	
+  <%= f.text_area :body %>
+  
+<input type="submit" name="commit" value="Create Book" data-disable-with="Create Book">
+ 
 <% end %>
 
 　
