--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -3,9 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
-    
- 
-
+    <script src="/assets/application-114264dd93c8ff30e4335b71eed7949d66c4e7a8eb62e2de6284c046fe07104b.js" data-turbolinks-track="reload"></script>
    <title>WebCampBackandNew</title>
   </head>
 
