--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -53,29 +53,20 @@ a:hover{
 }
 
 
-
 h1 {
     display: block;
     font-size: 2em;
-    margin-block-start: 0.67em;
-    margin-block-end: 0.67em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
+    margin:18px 0;
+    
 }
 
 table {
     display: table;
-    border-collapse: separate;
-    box-sizing: border-box;
-    text-indent: initial;
     border-spacing: 2px;
 }
 
-tbody {
-    display: table-row-group;
-    vertical-align: middle;
-    border-color: inherit;
+th {
+    padding-bottom:5px;
 }
 
 td {
@@ -85,8 +76,26 @@ td {
     
 }
 
-
 label {
     display: block;
 }
 
+h2 {
+    display: block;
+    font-size: 1.5em;
+    margin:16px 0;
+    
+}
+
+.field{
+    margin-bottom: 10px;
+}
+
+#notice {
+    color: green;
+}
+
+.button {
+    margin-bottom: 10px;
+    padding:2px 4px;
+}
