--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Editing Book</h2>
+<h1>Editing Book</h1>
 
 <% if @book.errors.any? %>
   <%= @book.errors.count %>errors prohibited this book from being saved:
@@ -10,17 +10,21 @@
 <% end %>
 
 <%= form_with model: @book, url: update_book_path(@book.id) ,method: :patch do |f| %>
-
-  <p>Title</p>
+<div class = "field">
+ <label for="book_title">Title</label>
   <%= f.text_field :title %>
-	
-  <p>Body</p>
-  <%= f.text_area :body %>
-	
-  <%= f.submit 'Update Book' %>
+  </div>
   
+<div class = "field">
+ <label for="book_body">Body</label>	
+  <%= f.text_area :body %>
+  </div>
+	
+ <input  class="button" type="submit" name="commit" value="Update Book" data-disable-with="Update Book">
+	
+
 <% end %>
 
 <%= link_to'Show',book_path(@book.id)%>
 |
-<%= link_to'Back','/index' %>
+<%= link_to'Back','/books' %>
