--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+ <% link_to "top",'root_path' %>
+ 
+ <!DOCTYPE html>
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
@@ -14,7 +16,7 @@
    </p>
    <p>印象を共有し交換することができます</p>
    <p>
-     <a href = "/index">start</a>
+     <a href = "/books">start</a>
    </p>
    
   </body>
